Fixed wrapper not being targeted correctly and replaced wrappers by details tags, and added small CSS to highlight users being able to collapse the objects

--- a/content.css
+++ b/content.css
@@ -2,3 +2,13 @@
   text-decoration: underline;
   font-weight: bold;
 }
+
+#api-injected-data details > summary {
+  list-style: none;
+  cursor: pointer;
+  width: fit-content;
+}
+
+#api-injected-data details > summary:hover {
+  background-color: lightblue;
+}
